--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="h-full" autosize>
   <mat-drawer #drawer>
-    <div class="flex flex-col">
+    <div class="flex flex-col px-2 pt-2 gap-1">
       <ng-container *ngTemplateOutlet="nav_content"></ng-container>
     </div>
   </mat-drawer>
@@ -23,12 +23,12 @@
 
 <ng-template #nav_content>
   <ng-container *ngFor="let navLink of navLinks">
-    <button mat-button [routerLink]="navLink.link" routerLinkActive="active">{{navLink.label}}</button>
+    <button mat-button [routerLink]="navLink.link" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">{{navLink.label}}</button>
   </ng-container>
   <ng-container *ngIf="(loginService.isLoggedIn$| async); else login">
     <button mat-button>Se déconnecter</button>
   </ng-container>
   <ng-template #login>
-    <button mat-button [routerLink]="'profile/login'" routerLinkActive="active">Login</button>
+    <button mat-button [routerLink]="'profile/login'" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">Login</button>
   </ng-template>
 </ng-template>
