--- a/src/app/core/profile/login/login.component.html
+++ b/src/app/core/profile/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<form [formGroup]="loginForm" class="flex flex-col gap-2 max-w-sm mt-10 mx-auto">
+  <span class="text-lg">Login</span>
+  <mat-form-field appearance="fill">
+    <mat-label>Identifiant</mat-label>
+    <input [formControl]="loginForm.controls.login" matInput placeholder="Placeholder">
+    <mat-icon matSuffix>person</mat-icon>
+  </mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>Mot de passe</mat-label>
+    <input [formControl]="loginForm.controls.password" matInput placeholder="Placeholder">
+    <mat-icon matSuffix>vpn_key</mat-icon>
+  </mat-form-field>
+  <div class="flex gap-4 justify-center">
+    <button mat-raised-button  [disabled]="!loginForm.valid" color="primary">Connexion</button>
+    <div class="flex flex-col gap-2 items-end">
+      <mat-checkbox [formControl]="loginForm.controls.rememberMe"
+        [checked]="loginForm.controls.rememberMe.value">
+        Se souvenir de moi ?
+      </mat-checkbox>
+        <a href="">Mot de passe oublié</a>
+    </div>
+  </div>
+</form>
