--- a/src/app/core/profile/login/login.component.html
+++ b/src/app/core/profile/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" class="flex flex-col gap-2 max-w-sm mt-10 mx-auto">
+<form [formGroup]="loginForm" class="flex flex-col gap-2 max-w-sm mt-10 mx-auto" (ngSubmit)="login()">
   <span class="text-lg">Login</span>
   <mat-form-field appearance="fill">
     <mat-label>Identifiant</mat-label>
@@ -11,7 +11,7 @@
     <mat-icon matSuffix>vpn_key</mat-icon>
   </mat-form-field>
   <div class="flex gap-4 justify-center">
-    <button mat-raised-button  [disabled]="!loginForm.valid" color="primary">Connexion</button>
+    <button mat-raised-button type="submit" [disabled]="!loginForm.valid" color="primary">Connexion</button>
     <div class="flex flex-col gap-2 items-end">
       <mat-checkbox [formControl]="loginForm.controls.rememberMe"
         [checked]="loginForm.controls.rememberMe.value">
