--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
     <button mat-button [routerLink]="navLink.link" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">{{navLink.label}}</button>
   </ng-container>
   <ng-container *ngIf="(loginService.isLoggedIn$| async); else login">
-    <button mat-button>Se déconnecter</button>
+    <button mat-button (click)="loginService.logout()">Se déconnecter</button>
   </ng-container>
   <ng-template #login>
     <button mat-button [routerLink]="'profile/login'" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">Login</button>
