--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
 
   <ng-container mat-drawer-content>
     <mat-toolbar color="primary">
-      <button *ngIf="breakpointService.isSmallDevice$ | async" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <button *ngIf="breakpointService.isSmallDevice$ | async" mat-icon-button class="example-icon"
+        aria-label="Example icon-button with menu icon">
         <mat-icon (click)="drawer.toggle()">menu</mat-icon>
       </button>
       <span>Logo Sortir.com</span>
@@ -23,12 +24,14 @@
 
 <ng-template #nav_content>
   <ng-container *ngFor="let navLink of navLinks">
-    <button mat-button [routerLink]="navLink.link" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">{{navLink.label}}</button>
+    <button mat-button [routerLink]="navLink.link" [routerLinkActiveOptions]="{exact: true}"
+      routerLinkActive="active">{{navLink.label}}</button>
   </ng-container>
-  <ng-container *ngIf="(loginService.isLoggedIn$| async); else login">
+  <ng-container *ngIf="(loginService.isLoggedIn$ | async); else login">
     <button mat-button (click)="loginService.logout()">Se déconnecter</button>
   </ng-container>
   <ng-template #login>
-    <button mat-button [routerLink]="'profile/login'" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">Login</button>
+    <button mat-button [routerLink]="'profile/login'" [routerLinkActiveOptions]="{exact: true}"
+      routerLinkActive="active">Login</button>
   </ng-template>
 </ng-template>
