--- a/src/app/core/excursion/excursion-display/ui/excursions-table.component.html
+++ b/src/app/core/excursion/excursion-display/ui/excursions-table.component.html
@@ -14,7 +14,7 @@
     <td mat-cell *matCellDef="let element"> {{element.limitDateRegistration | date:('dd/MM/YYYY')}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="subscribed">
+  <ng-container matColumnDef="subscribedParticipants">
     <th mat-header-cell *matHeaderCellDef> Inscripts/places </th>
     <td mat-cell *matCellDef="let element"> {{element.participants.length}}/{{element.maxRegistrationNumber}} </td>
   </ng-container>
@@ -24,19 +24,32 @@
     <td mat-cell *matCellDef="let element"> {{element.status.name}} </td>
   </ng-container>
 
-  <!-- <ng-container matColumnDef="subscribed">
+  <ng-container matColumnDef="subscribed">
     <th mat-header-cell *matHeaderCellDef> Inscrit </th>
-    <td mat-cell *matCellDef="let element"> {{element.subscribed}} </td>
-  </ng-container> -->
+    <td mat-cell *matCellDef="let element"> <mat-icon *ngIf="isSubscribedToExcursion(element)" class="text-green-600">check_circle</mat-icon> </td>
+  </ng-container>
 
   <ng-container matColumnDef="organisator">
     <th mat-header-cell *matHeaderCellDef> Organisateur </th>
-    <td mat-cell *matCellDef="let element"> <a href="" routerLinkActive="router-link-active" >{{element.organisator.lastName}} {{element.organisator.lastName[0]}}.</a> </td>
+    <td mat-cell *matCellDef="let element"> <a href="" routerLinkActive="router-link-active" >{{element.organisator.firstName}} {{element.organisator.lastName[0]}}.</a> </td>
   </ng-container>
 
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Actions </th>
-    <td mat-cell *matCellDef="let element"> {{element.actions}} </td>
+    <td mat-cell *matCellDef="let element">
+      {{element.actions}}
+      <ng-container *ngIf="isInCreation(element.status); else not_in_creation"><button mat-button>Modifier</button> - <button mat-button>Publier</button></ng-container>
+      <ng-template #not_in_creation>
+        <button mat-button>Afficher</button>
+        <ng-container *ngIf="!isPassed(element.status)">
+          <ng-container *ngIf="isOrganisator(element, currentParticipant);else not_organisator"> - <button mat-button>Annuler</button></ng-container>
+          <ng-template #not_organisator>
+            <ng-container *ngIf="isSubscribedToExcursion(element) && !isOnGoing(element.status)"> - <button mat-button >Se désister</button></ng-container>
+            <ng-container *ngIf="!isSubscribedToExcursion(element)"> - <button mat-button >S'inscrire</button></ng-container>
+          </ng-template>
+        </ng-container>
+      </ng-template>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
