--- a/src/app/core/excursion/excursion-display/ui/excursions-table.component.html
+++ b/src/app/core/excursion/excursion-display/ui/excursions-table.component.html
@@ -31,7 +31,7 @@
 
   <ng-container matColumnDef="organisator">
     <th mat-header-cell *matHeaderCellDef> Organisateur </th>
-    <td mat-cell *matCellDef="let element"> <a href="" routerLinkActive="router-link-active" >{{element.organisator.firstName}} {{element.organisator.lastName[0]}}.</a> </td>
+    <td mat-cell *matCellDef="let element"> <a [routerLink]="'/profile/'+element.organisator.participantId" routerLinkActive="router-link-active" >{{element.organisator.firstName}} {{element.organisator.lastName[0]}}.</a> </td>
   </ng-container>
 
   <ng-container matColumnDef="actions">
