dev[REFA] : Rename

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
     <button mat-button (click)="loginService.logout()">Se déconnecter</button>
   </ng-container>
   <ng-template #login>
-    <button mat-button [routerLink]="'profile/login'" [routerLinkActiveOptions]="{exact: true}"
+    <button mat-button [routerLink]="'participant/login'" [routerLinkActiveOptions]="{exact: true}"
       routerLinkActive="active">Login</button>
   </ng-template>
 </ng-template>
