dev[FIX] : Déclaration de component dans le bon module

--- a/src/app/core/participant/features/participant-display/participant-display.component.html
+++ b/src/app/core/participant/features/participant-display/participant-display.component.html
@@ -6,4 +6,4 @@
     Cet utilisateur n'existe pas.
   </p>
 </ng-template>
-<button mat-stroked-button color="accent" class="mx-auto" [routerLink]="''">Retour</button>
+<button mat-stroked-button color="accent" class="mx-auto" [routerLink]="'excursion/list'">Retour</button>
