--- a/src/app/core/excursion/ui/excursions-table/excursions-table.component.html
+++ b/src/app/core/excursion/ui/excursions-table/excursions-table.component.html
@@ -31,7 +31,7 @@
 
   <ng-container matColumnDef="organisator">
     <th mat-header-cell *matHeaderCellDef> Organisateur </th>
-    <td mat-cell *matCellDef="let element"> <a [routerLink]="'/profile/'+element.organisator.participantId" routerLinkActive="router-link-active" >{{element.organisator.firstName}} {{element.organisator.lastName[0]}}.</a> </td>
+    <td mat-cell *matCellDef="let element"> <a [routerLink]="'/participant/'+element.organisator.participantId" routerLinkActive="router-link-active" >{{element.organisator.firstName}} {{element.organisator.lastName[0]}}.</a> </td>
   </ng-container>
 
   <ng-container matColumnDef="actions">
@@ -40,7 +40,7 @@
       {{element.actions}}
       <ng-container *ngIf="isInCreation(element.status); else not_in_creation"><button mat-button>Modifier</button> - <button mat-button>Publier</button></ng-container>
       <ng-template #not_in_creation>
-        <button mat-button>Afficher</button>
+        <button mat-button [routerLink]="'/excursion/'+element.excursionId">Afficher</button>
         <ng-container *ngIf="!isPassed(element.status)">
           <ng-container *ngIf="isOrganisator(element, currentParticipant);else not_organisator"> - <button mat-button>Annuler</button></ng-container>
           <ng-template #not_organisator>
