dev[ADD]: Ajoutu visuel ajout/modification/suppression ville

--- a/src/app/core/excursion/features/excursion-display/excursion-display.component.html
+++ b/src/app/core/excursion/features/excursion-display/excursion-display.component.html
@@ -5,9 +5,9 @@
       <span class="opacity-50">Nom de la sortie :</span>
       <span class="font-medium">{{excursion.name}}</span>
       <span class="opacity-50">Date et heure de la sortie :</span>
-      <span class="font-medium">{{excursion.startTime | date:"DD/MM/YYYY hh:mm"}}</span>
+      <span class="font-medium">{{excursion.startTime | date:"dd/MM/YYYY hh:mm"}}</span>
       <span class="opacity-50">Date limite d'inscription :</span>
-      <span class="font-medium">{{excursion.limitDateRegistration| date:"DD/MM/YYYY"}}</span>
+      <span class="font-medium">{{excursion.limitDateRegistration| date:"dd/MM/YYYY"}}</span>
       <span class="opacity-50">Nombre de place :</span>
       <span class="font-medium">{{excursion.maxRegistrationNumber}}</span>
       <span class="opacity-50">Durée :</span>
