--- a/src/app/core/excursion/features/excursion-list/excursion-list.component.html
+++ b/src/app/core/excursion/features/excursion-list/excursion-list.component.html
@@ -8,7 +8,7 @@
 </div>
 <div>
   <p>Filtrer les sorties</p>
-  <app-excursions-filter></app-excursions-filter>
+  <app-excursion-filter></app-excursion-filter>
 </div>
 
-<app-excursions-table class="mt-4" [excursions]="(filteredList$ | async) ?? undefined" [currentParticipant]="(loginService.loggedUser$ | async)"></app-excursions-table>
+<app-excursion-table class="mt-4" [excursions]="(filteredList$ | async) ?? undefined" [currentParticipant]="(loginService.loggedUser$ | async)"></app-excursion-table>
