dev[ADD] : Ajout liste excursions dynamique

--- a/src/app/core/participant/features/login/login.component.html
+++ b/src/app/core/participant/features/login/login.component.html
@@ -2,7 +2,7 @@
   <span class="text-lg">Login</span>
   <mat-form-field appearance="fill">
     <mat-label>Identifiant</mat-label>
-    <input [formControl]="loginForm.controls.login" matInput placeholder="Placeholder">
+    <input [formControl]="loginForm.controls.username" matInput placeholder="Placeholder">
     <mat-icon matSuffix>person</mat-icon>
   </mat-form-field>
   <mat-form-field appearance="fill">
