--- a/src/app/core/participant/features/login/login.component.html
+++ b/src/app/core/participant/features/login/login.component.html
@@ -2,12 +2,12 @@
   <span class="text-lg">Login</span>
   <mat-form-field appearance="fill">
     <mat-label>Identifiant</mat-label>
-    <input [formControl]="loginForm.controls.username" matInput placeholder="Placeholder">
+    <input [formControl]="loginForm.controls.username" type="login" matInput placeholder="Placeholder">
     <mat-icon matSuffix>person</mat-icon>
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Mot de passe</mat-label>
-    <input [formControl]="loginForm.controls.password" matInput placeholder="Placeholder">
+    <input [formControl]="loginForm.controls.password" type="password" matInput placeholder="Placeholder">
     <mat-icon matSuffix>vpn_key</mat-icon>
   </mat-form-field>
   <div class="flex gap-4 justify-center">
