dev[ADD] : Ajout et modification d'excursions

--- a/src/app/core/excursion/features/excursion-add-dialog/excursion-add-dialog.component.html
+++ b/src/app/core/excursion/features/excursion-add-dialog/excursion-add-dialog.component.html
@@ -4,5 +4,6 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onCancelClick()">Annuler</button>
-  <button mat-button cdkFocusInitial [disabled]="!excursionForm.form?.valid">{{!!data ? "Modifier":"Ajouter" }}</button>
+  <button mat-button cdkFocusInitial [disabled]="!excursionForm.form?.valid || !excursionForm.form?.dirty" (click)="onValidate()">{{!!data ?
+    "Modifier":"Ajouter" }}</button>
 </div>
