--- a/src/app/core/excursion/features/excursion-list/excursion-list.component.html
+++ b/src/app/core/excursion/features/excursion-list/excursion-list.component.html
@@ -11,6 +11,6 @@
   <app-excursion-filter></app-excursion-filter>
 </div>
 
-<app-excursion-table class="mt-4" *ngIf="filteredList$ | async as filteredList" [excursions]="filteredList" [currentParticipant]="(loginService.loggedUser$ | async)"></app-excursion-table>
+<app-excursion-table class="mt-4" *ngIf="filteredList$ | async as filteredList" [excursions]="filteredList" [currentParticipant]="(loginService.loggedUser$ | async)" (onExcursionEvent)="onExcursionEvent($event)"></app-excursion-table>
 
 <button mat-raised-button class="py-2" (click)="addOrUpdate(null)"><mat-icon>library_add</mat-icon> Ajouter une sortie</button>
