--- a/src/app/core/excursion/ui/excursion-filter/excursion-filter.component.html
+++ b/src/app/core/excursion/ui/excursion-filter/excursion-filter.component.html
@@ -6,6 +6,7 @@
         <mat-option *ngFor="let aCampus of campus" [value]="aCampus">
           {{aCampus.name}}
         </mat-option>
+        <mat-option [value]="">--</mat-option>
       </mat-select>
     </mat-form-field>
     <mat-form-field appearance="fill">
