--- a/src/app/core/excursion/ui/excursion-add/excursion-add.component.html
+++ b/src/app/core/excursion/ui/excursion-add/excursion-add.component.html
@@ -66,14 +66,11 @@
       </mat-error>
     </mat-form-field>
   </div>
-
   <div class="flex flex-col gap-2" style="flex-grow: 4;">
     <mat-form-field appearance="fill">
       <mat-label>Campus</mat-label>
       <mat-select [formControl]="form.controls.campus">
-        <mat-select-trigger>
-          {{ form.controls.campus.value?.name ?? '' }}
-        </mat-select-trigger>
+        <mat-option *ngIf="form.controls.campus.value" [value]="form.controls.campus.value"> {{ form.controls.campus.value.name}}</mat-option>
         <mat-option *ngFor="let campus of campuses$ | async" [value]="campus">{{campus.name}}</mat-option>
       </mat-select>
 
@@ -87,9 +84,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Lieu</mat-label>
       <mat-select [formControl]="form.controls.excursionPlace">
-        <mat-select-trigger>
-          {{ form.controls.excursionPlace.value?.name }}
-        </mat-select-trigger>
+        <mat-option *ngIf="form.controls.excursionPlace.value" [value]="form.controls.excursionPlace.value"> {{ form.controls.excursionPlace.value.name}}</mat-option>
         <mat-option *ngFor="let place of places$ | async" [value]="place">{{place.name}}</mat-option>
       </mat-select>
       <mat-error *ngIf="form.controls.excursionPlace.invalid">
