--- a/src/app/core/excursion/ui/excursion-table/excursion-table.component.html
+++ b/src/app/core/excursion/ui/excursion-table/excursion-table.component.html
@@ -26,26 +26,46 @@
 
   <ng-container matColumnDef="subscribed">
     <th mat-header-cell *matHeaderCellDef> Inscrit </th>
-    <td mat-cell *matCellDef="let element"> <mat-icon *ngIf="isSubscribedToExcursion(element)" class="text-green-600">check_circle</mat-icon> </td>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon *ngIf="isSubscribedToExcursion(element)" class="text-green-600">check_circle</mat-icon>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="organisator">
     <th mat-header-cell *matHeaderCellDef> Organisateur </th>
-    <td mat-cell *matCellDef="let element"> <a [routerLink]="'/participant/'+element.organisator.participantId" routerLinkActive="router-link-active" >{{element.organisator.firstName}} {{element.organisator.lastName[0]}}.</a> </td>
+    <td mat-cell *matCellDef="let element"> <a [routerLink]="'/participant/'+element.organisator.participantId"
+        routerLinkActive="router-link-active">{{element.organisator.firstName}} {{element.organisator.lastName[0]}}.</a>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Actions </th>
     <td mat-cell *matCellDef="let element">
       {{element.actions}}
-      <ng-container *ngIf="isInCreation(element.status); else not_in_creation"><button mat-button>Modifier</button> - <button mat-button>Publier</button></ng-container>
+      <ng-container *ngIf="isInCreation(element.status); else not_in_creation">
+        <button mat-button
+          (click)="onExcursionEvent.emit({type:ExcursionEventType.MODIFY,data:element})">Modifier</button>
+        -
+        <button mat-button (click)="onExcursionEvent.emit({type:ExcursionEventType.PUBLISH,data:element})">Publier</button>
+      </ng-container>
       <ng-template #not_in_creation>
         <button mat-button [routerLink]="'/excursion/'+element.excursionId">Afficher</button>
         <ng-container *ngIf="!isPassed(element.status)">
-          <ng-container *ngIf="isOrganisator(element, currentParticipant);else not_organisator"> - <button mat-button>Annuler</button></ng-container>
+          <ng-container *ngIf="isOrganisator(element, currentParticipant);else not_organisator">
+            <ng-container *ngIf="element.status.statusId !== Status.CANCELED.statusId">
+              -
+              <button mat-button (click)="onExcursionEvent.emit({type:ExcursionEventType.CANCEL,data:element})">Annuler</button>
+            </ng-container>
+          </ng-container>
           <ng-template #not_organisator>
-            <ng-container *ngIf="isSubscribedToExcursion(element) && !isOnGoing(element.status)"> - <button mat-button >Se désister</button></ng-container>
-            <ng-container *ngIf="!isSubscribedToExcursion(element)"> - <button mat-button >S'inscrire</button></ng-container>
+            <ng-container *ngIf="isSubscribedToExcursion(element) && !isOnGoing(element.status)">
+              -
+              <button mat-button (click)="onExcursionEvent.emit({type:ExcursionEventType.DESIST,data:element})">Se désister</button>
+            </ng-container>
+            <ng-container *ngIf="!isSubscribedToExcursion(element)">
+              -
+              <button mat-button (click)="onExcursionEvent.emit({type:ExcursionEventType.SUBSCRIBE,data:element})">S'inscrire</button>
+            </ng-container>
           </ng-template>
         </ng-container>
       </ng-template>
