dev[ADD] : Affichage formulaire participant. Pas encore d'enregistrement

--- a/src/app/core/participant/features/participant-display/participant-display.component.html
+++ b/src/app/core/participant/features/participant-display/participant-display.component.html
@@ -1,15 +1,24 @@
 <div class="flex pt-4 justify-center max-w-xs self-center">
   <img src="./assets/default_avatar.PNG" alt="">
 </div>
-<app-participant-add #participantForm *ngIf="(participant$ | async) as participant;else userDontExists" [participant]="participant" [readonly]="readonly"></app-participant-add>
+<app-participant-add [participant]="participant$ | async">
+</app-participant-add>
 
 <ng-template #userDontExists>
   <p class="text-center mt-4">
     Cet utilisateur n'existe pas.
   </p>
 </ng-template>
-<div>
-  <button mat-stroked-button color="accent" class="mx-auto" [routerLink]="'/excursion/list'">Retour</button>
-  <button mat-stroked-button color="primary" class="mx-auto" *ngIf="!readonly" (click)="cancel()">Annuler</button>
-  <button mat-stroked-button color="primary" class="mx-auto" *ngIf="readonly" (click)="readonly = !readonly">Modifier</button>
+
+<div class="flex gap-2 self-center">
+  <button mat-stroked-button color="accent" [routerLink]="'/excursion/list'">Retour</button>
+  <button mat-stroked-button color="primary" *ngIf="!participantAddComponent?.form?.disabled"
+    (click)="cancel()">Annuler</button>
+  <button mat-raised-button color="primary" *ngIf="!participantAddComponent?.form?.disabled" (click)="save()">
+    <mat-icon>save</mat-icon> Sauvegarder
+  </button>
+  <button mat-stroked-button color="primary" *ngIf="participantAddComponent?.form?.disabled"
+    (click)="setFormEnabled(true)">
+    <mat-icon>edit</mat-icon> Modifier
+  </button>
 </div>
