--- a/src/app/core/participant/features/participant-display/participant-display.component.html
+++ b/src/app/core/participant/features/participant-display/participant-display.component.html
@@ -1,15 +1,16 @@
-<div class="flex gap-2 mx-auto mt-4 ">
-  <div class="h-20 w-20 overflow-hidden relative inline-block" style="border-radius: 50%;">
-    <img src="./assets/default_avatar.PNG" alt="" class="w-full h-full">
-  </div>
-  <div *ngIf="participantAddComponent?.form?.enabled" class="flex flex-col gap-2 justify-center">
-    <button mat-button class="self-center" (click)="fileInput.click()">
-      <mat-icon color="primary">edit</mat-icon>
-      Changer de photo
-    </button>
-    <ng-container *ngIf="file"><span class="ml-auto">{{file.name}}</span></ng-container>
-    <input hidden  mat-button #fileInput type="file" accept=".jpg,.png,.jpeg" (change)="onChange($event)">
-  </div>
+<img *ngIf="(participant$|async) as user; else loading_picture"
+  [src]="user.picture?'http://10.14.200.18:8000/uploads/profilePictures/'+ user.picture : './assets/default_avatar.PNG'"
+  alt="" class="mx-auto w-20 h-20 bg-cover rounded-full ml-1/2 ">
+<ng-template #loading_picture>
+  <ngx-skeleton-loader class="mx-auto w-20 h-20" [theme]="{'margin':'0 auto', 'height':'5rem','width':'5rem' }" animation="progress-dark" appearance="circle"></ngx-skeleton-loader>
+</ng-template>
+
+<div class="flex flex-col gap-2 justify-center">
+  <button mat-stroked-button class="self-center" (click)="fileInput.click()">
+    <mat-icon color="primary">edit</mat-icon>
+    Changer de photo
+  </button>
+  <input hidden mat-button #fileInput type="file" accept=".jpg,.png,.jpeg" (change)="onChange($event)">
 </div>
 
 <app-participant-add [participant]="participant$ | async">
@@ -28,8 +29,8 @@
   <button mat-raised-button color="primary" *ngIf="!participantAddComponent?.form?.disabled" (click)="save()">
     <mat-icon>save</mat-icon> Sauvegarder
   </button>
-  <button mat-stroked-button color="primary" *ngIf="participantAddComponent?.form?.disabled"
+  <button mat-stroked-button *ngIf="participantAddComponent?.form?.disabled"
     (click)="setFormEnabled(true)">
-    <mat-icon>edit</mat-icon> Modifier
+    <mat-icon color="primary">edit</mat-icon> Modifier
   </button>
 </div>
