--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.error-snackbar{
+  background-color: red;
+  color: white;
+}
