dev[ADD] : Ajout d'affichage de loading

--- a/src/app/core/admin/features/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/core/admin/features/admin-dashboard/admin-dashboard.component.html
@@ -4,7 +4,7 @@
 </button>
 <input hidden mat-button #fileInput type="file" accept=".csv" (change)="onChange($event)">
 
-<app-participant-table class="mt-2 mx-auto" [participants]="participants$ | async" (onUpdateClicked)="editUser($event)"
+<app-participant-table class="mt-2 mx-2 grow " [participants]="participants$ | async" (onUpdateClicked)="editUser($event)"
   (onDeleteClicked)="removeUser($event)" (onToggleUserActive)="onToggleUserActive($event)">
 
 </app-participant-table>
