--- a/src/app/core/campus/features/campus-list/campus-list.component.html
+++ b/src/app/core/campus/features/campus-list/campus-list.component.html
@@ -3,6 +3,6 @@
   <app-campus-filter></app-campus-filter>
 </div>
 
-<app-campus-table class="my-4" [cities]="(filteredList$ | async) ?? undefined" (onUpdateClicked)="addOrUpdate($event)" (onDeleteClicked)="onDeleteClicked($event)"></app-campus-table>
+<app-campus-table class="my-4" [cities]="filteredList$ | async" (onUpdateClicked)="addOrUpdate($event)" (onDeleteClicked)="onDeleteClicked($event)"></app-campus-table>
 
 <button mat-raised-button class="py-2" (click)="addOrUpdate(null)"><mat-icon>library_add</mat-icon> Ajouter un campus</button>
