--- a/src/app/core/campus/ui/campus-table/campus-table.component.html
+++ b/src/app/core/campus/ui/campus-table/campus-table.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
+<table *ngIf="!isLoading;else loading" mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Ville </th>
     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -15,4 +15,13 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell text-center" [attr.colspan]="displayedColumns.length">
+      No data matching the filter.
+    </td>
+  </tr>
 </table>
+
+<ng-template #loading>
+  <ngx-skeleton-loader class="mx-auto w-20 h-20" count="5" [theme]="{'margin':'0 auto', 'height':'3rem', 'background-color':'#88888811' }" animation="progress-dark" ></ngx-skeleton-loader>
+</ng-template>
