--- a/src/app/core/city/ui/city-table/city-table.component.html
+++ b/src/app/core/city/ui/city-table/city-table.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
+<table *ngIf="!isLoading;else loading"  mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Ville </th>
     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -7,12 +7,25 @@
   <ng-container matColumnDef="postCode">
     <th mat-header-cell *matHeaderCellDef> Actions </th>
     <td mat-cell *matCellDef="let element" class="w-20 p-0">
-      <button mat-icon-button color="accent" (click)="onUpdateClicked.emit(element)" ><mat-icon>edit</mat-icon></button>
-      <button mat-icon-button color="warn" (click)="onDeleteClicked.emit(element)" ><mat-icon>delete</mat-icon></button>
+      <button mat-icon-button color="accent" (click)="onUpdateClicked.emit(element)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button color="warn" (click)="onDeleteClicked.emit(element)">
+        <mat-icon>delete</mat-icon>
+      </button>
     </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell text-center" [attr.colspan]="displayedColumns.length">
+      No data matching the filter.
+    </td>
+  </tr>
 </table>
+
+<ng-template #loading>
+  <ngx-skeleton-loader class="mx-auto w-20 h-20" count="4" [theme]="{'margin':'0 auto', 'height':'3rem', 'background-color':'#88888811' }" animation="progress-dark" ></ngx-skeleton-loader>
+</ng-template>
